--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "@quasar/extras": "^1.0.0",
     "@supabase/supabase-js": "^1.35.7",
     "pinia": "^2.0.11",
+    "pinia-plugin-persist": "^1.0.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
+    "@volar-plugins/vetur": "latest",
     "autoprefixer": "^10.4.2",
     "dotenv": "^16.0.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
-    "@volar-plugins/vetur": "latest"
+    "prettier": "^2.5.1"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
